# ErrorContext

./: README.md  pyproject.toml
docs/: index.html  metadata.json
errorcontext/: __init__.py  circuit_breaker.py  decorators.py  error_context.py  logger.py  retry_policy.py
examples/: payment_service.py
tests/: test_circuit_breaker.py  test_error_context.py
