[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "errorcontext"
version = "1.0.0"
description = "Python stack traces tell you where. ErrorContext tells you why."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["errorcontext*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
